# python

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.txt  CMakeLists.txt  Dockerfile  MANIFEST.in  PKG-INFO  README.rst  azure-pipelines.yml  debug.sh  pyproject.toml  setup.py  setup.py.off  tox.ini
.github/: environment.yml
.github/workflows/: build.yml  release.yml
pdal/: CMakeLists.txt  PyArray.cpp  PyArray.hpp  PyDimension.hpp  PyMesh.cpp  PyMesh.hpp  PyPipeline.cpp  PyPipeline.hpp  StreamableExecutor.cpp  StreamableExecutor.hpp  __init__.py  array.py  dimension.py  drivers.py  libpdalpython.cpp  libpdalpython.pyx  libpybind11.cpp  macros.cmake  pio.py  pipeline.py
pdal/filters/: PythonFilter.cpp
pdal/io/: NumpyReader.cpp  NumpyReader.hpp
pdal/plang/: Environment.cpp  Invocation.cpp  Redirector.cpp  Redirector.hpp
pdal/test/: NumpyReaderTest.cpp  PythonFilterTest.cpp  TestConfig.hpp  look.py
pdal/test/data/: four-floats.py  from-module.json  predicate-embed.json  predicate-keep-ground-and-unclass.json  predicate-keep-last-return.json  predicate-keep-specified-returns.json  threedim.py
pdal/test/data/pipeline/: crop_wkt_2d.json  crop_wkt_2d_classification.json  from-module.json  predicate-embed.json  predicate-keep-ground-and-unclass.json  predicate-keep-last-return.json  predicate-keep-specified-returns.json  programmable-update-y-dims.json  reproject.json
pdal/test/gtest/: CMakeLists.txt
pdal/test/pipeline/: crop_wkt_2d_classification.json  predicate-embed.json  predicate-keep-ground-and-unclass.json  predicate-keep-last-return.json  predicate-keep-specified-returns.json  programmable-update-y-dims.json  reproject.json
scripts/appveyor/: build.cmd  test.cmd
scripts/azp/: linux.yml  osx.yml  win.yml
scripts/travis/: script.sh
src/pdal/: PyArray.cpp  PyArray.hpp  PyPipeline.cpp  PyPipeline.hpp  StreamableExecutor.cpp  StreamableExecutor.hpp  __init__.py  __main__.py  drivers.py  export.hpp  libpdalpython.cpp  pipeline.py
test/: test_pio.py  test_pipeline.py  test_pypy.py
test/data/: bad.json  bad.py  chip.json  chip.py  mesh.json  mesh.py  range.json  range.py  reproject.json  reproject.py  sort.json  sort.py  test3d.npy
